--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,3 +67,51 @@ jobs:
         run: ./build-image.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  # Déploiement de l'application sur le serveur de production
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build-image]
+
+    steps:
+      # Se connecter au serveur et déployer l'application
+      - name: Deploy to production server
+        if: needs.build-image.result == 'success'
+        shell: bash
+        run: |
+          set -eio pipefail
+          # # Créer le dossier SSH et configurer la clé privée
+          # mkdir -p ~/.ssh
+          # echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
+          # chmod 600 ~/.ssh/deploy_key
+
+          # -i ~/.ssh/deploy_key
+
+          # Se connecter au serveur via SSH et exécuter les commandes de déploiement
+          ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} << EOF
+            CONTAINER_NAME="${{ github.event.repository.name }}"
+            IMAGE_TAG="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
+            
+            echo "Authentification à GitHub Container Registry..."
+            echo "${{ secrets.PAT_GITHUB_TOKEN }}" | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
+            
+            echo "Arrêt et suppression du conteneur existant s'il existe..."
+            docker stop $CONTAINER_NAME || true
+            docker rm $CONTAINER_NAME || true
+            docker rmi $IMAGE_TAG || true
+            
+            echo "Récupération de l'image..."
+            docker pull $IMAGE_TAG
+            
+            echo "Démarrage du conteneur..."
+            docker run -d --name $CONTAINER_NAME -p 3000:3000 --restart unless-stopped $IMAGE_TAG
+
+            echo "Vérification du statut du conteneur..."
+            docker ps | grep $CONTAINER_NAME
+          EOF
+          echo "Déploiement terminé"
+
+      # Message de succès
+      - name: Deployment success
+        run: echo "Déploiement terminé avec succès."
+        if: success()
