--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,7 +79,7 @@ jobs:
         if: needs.build-image.result == 'success'
         shell: bash
         run: |
-          set -eo pipefail
+          set -euo pipefail
 
           # Créer le dossier SSH et configurer la clé privée
           mkdir -p ~/.ssh
@@ -87,8 +87,11 @@ jobs:
           chmod 600 ~/.ssh/deploy_key
 
           # Se connecter au serveur production via SSH et exécuter les commandes de déploiement
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key -p 22 ip172-18-1-33-d5jkq4469qi000af7g1g@direct.labs.play-with-docker.com
+          ssh -tt -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key -p 8022 ip172-18-1-33-d5jkq4469qi000af7g1g@direct.labs.play-with-docker.com
           # ssh -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key -p ${{ secrets.SSH_PORT }} ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} << EOF
+
+            set -e
+            
             CONTAINER_NAME="${{ github.event.repository.name }}"
             IMAGE_TAG="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
             
