✨ Update build and deploy workflows: change main branch trigger in build.yml and modify deploy.yml to trigger on completion of the build workflow.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,10 @@
 name: Deploy
 
 on:
-  push:
+  workflow_run:
+    workflows: ["Build Workflow"]
+    types:
+      - completed
     branches:
       - main
 
@@ -12,7 +15,7 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
       - name: Install sshpass
