--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ name: Build Workflow
 on:
   push:
     branches:
-      - main-v2
+      - main
 
 # Variables d'environnement partagées par tous les jobs
 env:
