✨ Update build and deploy workflows to trigger manually, removing automatic push triggers for improved control over CI/CD processes.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,13 @@
 name: Build Santu Hub CICD
 
-# Ce workflow se déclenche automatiquement lors d'un push sur la branche main
+# Ce workflow se déclenche manuellement
 on:
-  push:
-    branches:
-      - main
-      - develop
+  workflow_dispatch:
+  # Déclenchement automatique (commenté)
+  # push:
+  #   branches:
+  #     - main
+  #     - develop
 
 # Variables d'environnement partagées par tous les jobs
 env:
